--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>Pauline Chevallier's profile</title>
-		<meta name="description" content="This is the profile of Jen">
+		<meta name="description" content="This is the profile of Jen Z">
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Handlee&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
